WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196032
JSC::createError needs to check for OOM in errorDescriptionForValue
https://bugs.webkit.org/show_bug.cgi?id=196032
Summary
JSC::createError needs to check for OOM in errorDescriptionForValue
Tadeu Zagallo
Reported
2019-03-20 13:56:51 PDT
...
Attachments
Patch
(5.62 KB, patch)
2019-03-20 14:07 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2019-03-20 14:07:18 PDT
Created
attachment 365396
[details]
Patch
Tadeu Zagallo
Comment 2
2019-03-20 14:25:41 PDT
<
rdar://problem/46842740
>
Mark Lam
Comment 3
2019-03-20 14:31:18 PDT
Comment on
attachment 365396
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2019-03-20 15:12:18 PDT
Comment on
attachment 365396
[details]
Patch Clearing flags on attachment: 365396 Committed
r243246
: <
https://trac.webkit.org/changeset/243246
>
WebKit Commit Bot
Comment 5
2019-03-20 15:12:19 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 6
2019-03-20 16:48:17 PDT
stress/create-error-out-of-memory-rope-string.js is failing on the Release JSC bot:
https://build.webkit.org/builders/Apple%20High%20Sierra%20Release%20JSC%20%28Tests%29/builds/8582/steps/jscore-test/logs/stdio
Yusuke Suzuki
Comment 7
2019-03-20 17:28:05 PDT
Committed
r243265
: <
https://trac.webkit.org/changeset/243265
>
Shawn Roberts
Comment 8
2019-03-21 09:37:11 PDT
stress/create-error-out-of-memory-rope-string.js.bytecode-cache stress/create-error-out-of-memory-rope-string.js.default stress/create-error-out-of-memory-rope-string.js.dfg-eager stress/create-error-out-of-memory-rope-string.js.dfg-eager-no-cjit-validate stress/create-error-out-of-memory-rope-string.js.dfg-maximal-flush-validate-no-cjit stress/create-error-out-of-memory-rope-string.js.ftl-eager stress/create-error-out-of-memory-rope-string.js.ftl-eager-no-cjit stress/create-error-out-of-memory-rope-string.js.ftl-eager-no-cjit-b3o1 stress/create-error-out-of-memory-rope-string.js.ftl-no-cjit-b3o0 stress/create-error-out-of-memory-rope-string.js.ftl-no-cjit-no-inline-validate stress/create-error-out-of-memory-rope-string.js.ftl-no-cjit-no-put-stack-validate stress/create-error-out-of-memory-rope-string.js.ftl-no-cjit-small-pool stress/create-error-out-of-memory-rope-string.js.ftl-no-cjit-validate-sampling-profiler stress/create-error-out-of-memory-rope-string.js.no-cjit-validate-phases stress/create-error-out-of-memory-rope-string.js.no-ftl stress/create-error-out-of-memory-rope-string.js.no-llint New test is causing 15 Failures on JSC Debug queue's.
https://build.webkit.org/builders/Apple%20High%20Sierra%20Debug%20JSC%20(Tests)/builds/2394/steps/jscore-test/logs/stdio
Tadeu Zagallo
Comment 9
2019-03-21 11:15:37 PDT
(In reply to Shawn Roberts from
comment #8
)
> New test is causing 15 Failures on JSC Debug queue's.
I'm fixing it in
https://bugs.webkit.org/show_bug.cgi?id=196089
dwfault
Comment 10
2019-03-27 19:49:14 PDT
***
Bug 195875
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug