JSC::createError needs to check for OOM in errorDescriptionForValue https://bugs.webkit.org/show_bug.cgi?id=196032 <rdar://problem/46842740>

Reviewed by Mark Lam.

JSTests:

* stress/create-error-out-of-memory-rope-string.js: Added.

Source/JavaScriptCore:

We were missing exceptions checks at two levels:
- In errorDescriptionForValue, when the value is a string, we should
  check that JSString::value returns a valid string, since we might run
  out of memory if it is a rope and we need to resolve it.
- In createError, we should check for the result of errorDescriptionForValue
  before concatenating it with the message provided by the caller.

* runtime/ExceptionHelpers.cpp:
(JSC::errorDescriptionForValue):
(JSC::createError):
* runtime/ExceptionHelpers.h:


Canonical link: https://commits.webkit.org/210311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243246 268f45cc-cd09-0410-ab3c-d52691b4dbfc